# cinner

./: .env  .gitignore  DEPLOYMENT.md  README.md  REDIS_STORAGE.md  UNRAID_REDIS_FIX.md  config.py  deploy.sh  docker-compose.redis.yml  fix-redis-unraid.sh  local_dev_setup.md  pyproject.toml  requirements-app.txt  run_https_local.sh  run_local.sh  setup.py
app/: add_api_token_migration.py  app.py  config.py  create_admin.py  entrypoint.sh  migrate_db.py  stripe_webhook.py
app/instance/: users.db  users.db.bak
app/migrations/: add_stripe_customer_id.py
app/static/css/: styles.css
app/templates/: admin.html  checkout.html  index.html  invite.html  login.html  payment.html  profile.html  project_report.html  register.html
cinner/: __init__.py  timesheet_plotter.py
infra/: Dockerfile  README.md  build-image.sh  deploy-local.sh  deploy.sh  diagnose.sh  unraid_insecure_registry_setup.md
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
kivy_presis/: main.py
kivy_presis/auth/: jwt_utils.py
presis/: __init__.py  redis_backend.py  redis_time_tracker.py  redis_user.py  time_tracker.py  timesheet_plotter.py
terraform/modules/redis/: README.md  clear-all-votes.py  count-votes.py  load-redis.sh  (+5 more)
terraform/prod/: .tf-deploy-env  Makefile  README.md  deploy.sh  destroy.sh  errored.tfstate  init.sh  main.tf  output.sh  outputs.tf  ping-redis-server.sh  plan.sh  ssh.sh  taint.sh  variables.tf
terraform/tfbackend/: README.md  s3.tf
tests/: README.md  conftest.py  run_tests.sh  test_registration.py  test_stripe_integration.py  test_timesheet.py
(+4 files in other folders)
