[tool.poetry]
name = "presis"
version = "1.0.1"
description = "presis is a (pronounced check-in-er) is a multitool for keeping track of time-based projects."
license = "MIT"
authors = [
    "williamcharltonengineering <will@williamcharltonengineering.com>"
]

readme = 'README.md'

repository = "https://github.com/williamcharltonengineering/presis"
homepage = "https://github.com/williamcharltonengineering/presis"

keywords = ['time', 'tracking', 'productivity', 'time tracking', 'reporting']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"

[tool.poetry.scripts]
presis = 'presis:main'